feat: add basic sidenav card and searching

--- a/src/styles/core/_colors.scss
+++ b/src/styles/core/_colors.scss
@@ -43,6 +43,10 @@ $base-colors: (
     light: rgb(240, 240, 240),
     dark: rgb(66, 66, 66)
   ),
+  fill-gray-quaternary: (
+    light: rgb(240, 240, 240),
+    dark: rgb(66, 66, 66)
+  ),
   figure-gray-tertiary: (
     light: rgb(102, 102, 102),
     dark: rgb(176, 176, 176)
