--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -15,6 +15,7 @@ $form-focus-size: 4px;
 
 // Border radius
 $border-radius: 4px !default;
+$tiny-border-radius: $border-radius !default;
 $big-border-radius: $border-radius !default;
 
 $contenttable-spacing-single-side: 2rem;
