refactor: minor cleanup and bug fixes

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -17,6 +17,7 @@ $form-focus-size: 4px;
 $border-radius: 4px !default;
 $tiny-border-radius: $border-radius !default;
 $big-border-radius: $border-radius !default;
+$small-border-radius: $border-radius !default;
 
 $contenttable-spacing-single-side: 2rem;
 
