refactor: update the navigator highlight and hover colors

--- a/src/styles/core/_colors.scss
+++ b/src/styles/core/_colors.scss
@@ -95,6 +95,10 @@ $base-colors: (
     light: rgb(0, 0, 255),
     dark: rgb(0, 102, 255)
   ),
+  fill-light-blue-secondary: (
+    light: rgb(209, 209, 255),
+    dark: rgb(0, 78, 196)
+  ),
   tutorials-teal: (
     light: rgb(0, 0, 0),
     dark: rgb(255, 255, 255)
