--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -312,15 +312,17 @@ $breakpoint-attributes: (
 
 @mixin breakpoint-full-width-container {
   max-width: 1800px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @mixin breakpoint-dynamic-sidebar-content {
   @include inTargetWeb {
-    max-width: 860px;
+    max-width: 900px;
     min-width: map-deep-get($breakpoint-attributes, (default, small, min-width));
     margin: auto;
     padding: 0 20px;
+    box-sizing: border-box;
   }
   @include inTargetIde {
     @include breakpoint-content()
