Add a sidenav navigator to the documentation pages (WIP behind a feature flag, off by default) (#51)
Co-authored-by: Marina Aísa <marina@marinaaisa.com>
Co-authored-by: Marcus Ortiz <marcus_ortiz@apple.com>

--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -10,9 +10,12 @@
 
 // A map used to associate scoped breakpoint names with a map of attributes.
 // These attributes will be used to define the appropriate media queries for
-// the "large", "medium", and "small" breakpoints.
+// the "xlarge", "large", "medium", and "small" breakpoints.
 $breakpoint-attributes: (
   default: (
+    xlarge: (
+      min-width: 1800px
+    ),
     large: (
       min-width: 1069px,
       content-width: 980px,
@@ -307,5 +310,61 @@ $breakpoint-attributes: (
     @media only screen and (min-width: $min-width) and (max-width: $max-width) {
       @content;
     }
+  }
+}
+
+/// Applies a max-width container, in order to limit the adjustable sidebar content from
+/// growing too much on ultra-widescreens
+@mixin breakpoint-full-width-container {
+  max-width: map-deep-get($breakpoint-attributes, (default, xlarge, min-width));
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/// Applies a content container, for cases with dynamic adjustable sidebars. In IDE mode uses the
+/// default breakpoint-content mixin.
+@mixin breakpoint-dynamic-sidebar-content {
+  @include inTargetWeb {
+    max-width: 920px;
+    min-width: map-deep-get($breakpoint-attributes, (default, small, min-width));
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+
+    // make sure there is 120px space around the content on xlarge
+    @include breakpoints-from(xlarge) {
+      box-sizing: unset;
+      padding-right: 120px;
+      padding-left: 120px;
+    }
+  }
+  @include inTargetIde {
+    @include breakpoint-content()
+  }
+}
+
+/// Renders content only when we have the adjustable sidebar ENABLED
+@mixin with-adjustable-sidebar {
+  .full-width-container & {
+    @content
+  }
+}
+
+/// Renders content only when we have the adjustable sidebar DISABLED
+@mixin without-adjustable-sidebar {
+  .static-width-container & {
+    @content
+  }
+}
+
+/// Applies the correct breakpoint mixin, based on presence of a dynamic sidebar
+@mixin dynamic-content-container {
+  @include with-adjustable-sidebar {
+    @include breakpoint-dynamic-sidebar-content;
+  }
+
+  @include without-adjustable-sidebar {
+    @include breakpoint-content;
   }
 }
