--- a/src/styles/core/colors/_light.scss
+++ b/src/styles/core/colors/_light.scss
@@ -14,9 +14,11 @@
   --color-fill-tertiary: #{light-color(fill-tertiary)};
   --color-fill-quaternary: #{base-color(fill-quaternary)};
   --color-fill-blue: #{light-color(fill-blue)};
+  --color-fill-light-blue-secondary: #{light-color(fill-light-blue-secondary)};
   --color-fill-gray: #{light-color(fill-gray)};
   --color-fill-gray-secondary: #{light-color(fill-gray-secondary)};
   --color-fill-gray-tertiary: #{light-color(fill-gray-tertiary)};
+  --color-fill-gray-quaternary: #{light-color(fill-gray-quaternary)};
   --color-fill-green-secondary: #{light-color(fill-green-secondary)};
   --color-fill-orange-secondary: #{light-color(fill-orange-secondary)};
   --color-fill-red-secondary: #{light-color(fill-red-secondary)};
@@ -188,4 +190,5 @@
   --color-tutorials-overview-navigation-link-hover: #{dark-color(figure-gray)};
   --color-tutorial-hero-text: #{dark-color(figure-gray)};
   --color-tutorial-hero-background: #{dark-color(fill)};
+  --color-navigator-item-hover: #{change-color(light-color(fill-blue), $alpha: 0.05)};
 }
