--- a/src/styles/core/_nav.scss
+++ b/src/styles/core/_nav.scss
@@ -13,6 +13,7 @@ $nav-height: rem(52px);
 $nav-height-small: rem(48px);
 $nav-padding: rem(22px);
 $nav-padding-small: rem(16px);
+$nav-padding-wide: rem(30px);
 $nav-menu-item-left-margin: rem(24px);
 $nav-timingfunction: ease-in !default;
 $nav-menu-tray-transition: max-height 0.4s $nav-timingfunction 0s, visibility 0s linear 1s !default;
@@ -22,6 +23,7 @@ $nav-menu-item-displacement: none !default;
 $nav-menu-item-stagger-delay: 0s !default;
 $nav-bg-color-transition: 0.5s $nav-timingfunction !default;
 $nav-space-between-elements: rem(10px);
+$nav-space-hierarchy-elements: rem(3px);
 
 @mixin nav-in-breakpoint($nested: false) {
   @include unify-selector('.nav--in-breakpoint-range', $nested) {
@@ -43,6 +45,12 @@ $nav-space-between-elements: rem(10px);
 
 @mixin nav-dark($nested: false) {
   @include unify-selector('.theme-dark', $nested) {
+    @content;
+  }
+}
+
+@mixin nav-is-wide-format($nested: false) {
+  @include unify-selector('.nav--is-wide-format', $nested) {
     @content;
   }
 }
