--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -1,7 +1,7 @@
 /**
  * This source file is part of the Swift.org open source project
  *
- * Copyright (c) 2021 Apple Inc. and the Swift project authors
+ * Copyright (c) 2021-2022 Apple Inc. and the Swift project authors
  * Licensed under Apache License v2.0 with Runtime Library Exception
  *
  * See https://swift.org/LICENSE.txt for license information
@@ -17,6 +17,7 @@ $form-focus-size: 4px;
 $border-radius: 4px !default;
 $tiny-border-radius: $border-radius !default;
 $big-border-radius: $border-radius !default;
+$small-border-radius: $border-radius !default;
 
 $contenttable-spacing-single-side: 2rem;
 
