Squashed commit of the following:
commit 882f7a3747efd417cc3c27c310d7037e05bb29eb
Author: Hanqing Huang <87735557+hqhhuang@users.noreply.github.com>
Date:   Thu Mar 3 15:16:11 2022 -0800

    Update check-source

commit f7ce4c625b5d256273afb03cf2fd9105d2007d70
Author: Hanqing Huang <87735557+hqhhuang@users.noreply.github.com>
Date:   Thu Mar 3 15:15:09 2022 -0800

    Update check-source

commit 623564bd562d83bf38ca66248b0a75c1e679641a
Merge: 3f83bef 0fad744
Author: Hanqing Huang <hqh@apple.com>
Date:   Thu Mar 3 15:01:37 2022 -0800

    Merge branch 'hqhuang/remove-right-side-bar' of github.com:hqhhuang/swift-docc-render into hqhuang/remove-right-side-bar

commit 3f83befcd672428a5e9432c6bdd29d00d0c2dfdb
Author: Hanqing Huang <hqh@apple.com>
Date:   Thu Mar 3 14:54:16 2022 -0800

    squash style change

commit 0fad744576e1692b69a7322c354f3fd940da03c8
Merge: e3e7c1a 773e7be
Author: Hanqing Huang <87735557+hqhhuang@users.noreply.github.com>
Date:   Thu Mar 3 10:16:03 2022 -0800

    Merge pull request #2 from hqhhuang/fix-spacing-with-sidebar

    Fix body content spacing when there is a sidebar

commit 773e7be481fbbba9e745637a31ef64f609eae47b
Author: Hanqing Huang <hqh@apple.com>
Date:   Thu Mar 3 09:42:54 2022 -0800

    fix content spacing with sidebar

    fix content spacing with sidebar

commit e3e7c1a15c36dc9173160ccaf7a66d5779483aab
Merge: d7befa0 5298f23
Author: Hanqing Huang <hqh@apple.com>
Date:   Wed Mar 2 21:46:39 2022 -0800

    Merge remote-tracking branch 'dobri/dhristov/add-sidenav-hero-v2' into hqhuang/remove-right-side-bar

commit d7befa0b65df5983850a32df3f30dedbc71cbe80
Merge: 88cd1f4 914871d
Author: Hanqing Huang <hqh@apple.com>
Date:   Wed Mar 2 21:20:10 2022 -0800

    Merge remote-tracking branch 'upstream/main' into hqhuang/remove-right-side-bar

commit 88cd1f42dd6669b05995abe53219cdc842110fe1
Merge: 3c21d07 527827c
Author: Hanqing Huang <hqh@apple.com>
Date:   Tue Feb 22 10:49:11 2022 -0800

    Merge remote-tracking branch 'upstream/main' i

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -51,7 +51,7 @@ $tutorial-section-spacing-single-side: 80px;
 $step-border-width: 4px !default;
 
 // Section components
-$section-spacing-single-side: 3rem;
+$section-spacing-single-side: 40px;
 
 // Aside components
 $aside-width-border: 0px !default;
