fix: add separator to sidebar toggle icon

--- a/src/styles/core/_nav.scss
+++ b/src/styles/core/_nav.scss
@@ -14,6 +14,7 @@ $nav-height-small: rem(48px);
 $nav-padding: rem(22px);
 $nav-padding-small: rem(16px);
 $nav-menu-item-left-margin: rem(24px);
+$nav-pre-title-item-margin: rem(10px);
 $nav-timingfunction: ease-in !default;
 $nav-menu-tray-transition: max-height 0.4s $nav-timingfunction 0s, visibility 0s linear 1s !default;
 $nav-items-timingfunction: cubic-bezier(0.07, 1.06, 0.27, 0.95) !default;
