--- a/src/styles/core/_helpers.scss
+++ b/src/styles/core/_helpers.scss
@@ -266,3 +266,19 @@
     }
   }
 }
+
+@mixin safe-area-set($inset, $property, $value) {
+  // unquote is used to ensure that we are using the CSS Level 4 `max` function
+  // instead of the builtin `max` function provided by the Sass preprocessor
+  @supports(padding: unquote('max(0px)')) {
+    #{$property}: unquote('max(#{$value}, env(safe-area-inset-#{$inset}))');
+  }
+}
+
+@mixin safe-area-left-set($property, $value) {
+  @include safe-area-set(left, $property, $value);
+}
+
+@mixin safe-area-right-set($property, $value) {
+  @include safe-area-set(right, $property, $value);
+}
