Update padding to be consistent with Tutorial
Update padding to be consistent with Tutorial

--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -342,8 +342,9 @@ $breakpoint-attributes: (
     }
 
     @include breakpoint(small) {
-      padding-left: 20px;
-      padding-right: 20px;
+      width: 87.5%;
+      padding-left: unset;
+      padding-right: unset;
     }
   }
 
