refactor: update the styling related to API diffs

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -16,6 +16,7 @@ $form-focus-size: 4px;
 // Border radius
 $border-radius: 4px !default;
 $tiny-border-radius: $border-radius !default;
+$large-border-radius: $border-radius !default;
 $big-border-radius: $border-radius !default;
 $small-border-radius: $border-radius !default;
 
