update padding and width in S vp
update padding and width in S vp

--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -342,8 +342,9 @@ $breakpoint-attributes: (
     }
 
     @include breakpoint(small) {
-      padding-left: 20px;
-      padding-right: 20px;
+      width: $small-viewport-content-width;
+      padding-left: $small-viewport-content-padding;
+      padding-right: $small-viewport-content-padding;
     }
   }
 
