--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -64,3 +64,7 @@ $total-columns: 12 !default;
 $card-horizontal-spacing: 10px;
 $card-horizontal-spacing-large: $card-horizontal-spacing * 2;
 $card-horizontal-spacing-small: $card-horizontal-spacing / 2;
+
+// Small vp padding and width
+$small-viewport-content-padding: 20px !default;
+$small-viewport-content-width: 100% !default;
