chore: change the background for the modified previous declaration background

--- a/src/styles/core/colors/_light.scss
+++ b/src/styles/core/colors/_light.scss
@@ -70,7 +70,7 @@
   --color-changes-deprecated-hover: var(--color-figure-light-gray);
   --color-changes-modified: var(--color-figure-light-gray);
   --color-changes-modified-hover: var(--color-figure-light-gray);
-  --color-changes-modified-previous-background: var(--color-fill-gray-secondary);
+  --color-changes-modified-previous-background: var(--color-fill);
   --color-code-background: var(--color-fill-secondary);
   --color-code-collapsible-background: var(--color-fill-tertiary);
   --color-code-collapsible-text: var(--color-figure-gray-secondary-alt);
