--- a/src/styles/core/_changes.scss
+++ b/src/styles/core/_changes.scss
@@ -15,11 +15,14 @@ $change-icon-width: rem(20px);
 $change-highlight-horizontal-space: 14px;
 $change-highlight-horizontal-space-rem: rem($change-highlight-horizontal-space);
 $change-highlight-vertical-space-total: $change-highlight-vertical-space + $change-border-stroke-width;
+
 // Width of highlight endcaps only used in this file
 $change-total-coin-space: rem(5px);
 $change-coin-y-offset: 10px;
 $change-coin-y-offset-reduced: rem($change-highlight-vertical-space-total) + $change-total-coin-space/2;
-
+$change-coin-x-offset: $change-highlight-horizontal-space - 5;
+// the space needed for the change icon + it's margin
+$change-icon-occupied-space: $change-icon-width + $change-highlight-horizontal-space-rem;
 // Paths to the changes icons
 $modified-svg: url('~theme/assets/img/icons/modified-icon.svg') !default;
 $modified-dark-svg: $modified-svg !default;
@@ -51,7 +54,7 @@ $deprecated-dark-rounded-svg: $deprecated-svg !default;
   bottom: 0;
   content: " ";
   margin: auto;
-  margin-right: ($change-highlight-horizontal-space - 5);
+  margin-right: $change-coin-x-offset;
   position: absolute;
   top: 0;
   width: $size;
@@ -78,15 +81,15 @@ $deprecated-dark-rounded-svg: $deprecated-svg !default;
 }
 
 @mixin change-highlight-end-spacing() {
-  padding-right: $change-icon-width + $change-highlight-horizontal-space-rem;
+  padding-left: $change-icon-occupied-space;
 }
 
 @mixin change-highlight-horizontal-spacing() {
-  padding-left: rem($change-highlight-horizontal-space);
+  padding-right: $change-highlight-horizontal-space-rem;
   @include change-highlight-end-spacing();
 
   &.changed {
-    padding-left: $change-highlight-horizontal-space;
+    padding-right: $change-highlight-horizontal-space-rem;
   }
 
   @include breakpoint(small) {
@@ -95,7 +98,7 @@ $deprecated-dark-rounded-svg: $deprecated-svg !default;
     padding-right: 0;
 
     &.changed {
-      padding-left: $change-highlight-horizontal-space;
+      padding-right: $change-highlight-horizontal-space;
       @include change-highlight-end-spacing();
     }
   }
@@ -111,8 +114,8 @@ $deprecated-dark-rounded-svg: $deprecated-svg !default;
 /// The 1 value represents the border width.
 ///
 @mixin change-highlight-horizontal-text-alignment() {
-  margin-left: rem(-$change-highlight-horizontal-space - 1);
-  width: calc(100% + #{$change-highlight-horizontal-space} + 1px);
+  margin-left: -$change-icon-occupied-space - rem(1px);
+  width: calc(100% + #{$change-icon-occupied-space} + 1px);
 
   @include change-highlight-horizontal-text-alignment-small();
 }
@@ -128,8 +131,8 @@ $deprecated-dark-rounded-svg: $deprecated-svg !default;
     }
 
     &.changed {
-      margin-left: rem(-$change-highlight-horizontal-space);
-      width: calc(100% + #{$change-highlight-horizontal-space * 2});
+      margin-left: -$change-icon-occupied-space;
+      width: calc(100% + #{$change-icon-occupied-space * 2});
     }
   }
 }
