--- a/src/styles/core/typography/_font-style-utils.scss
+++ b/src/styles/core/typography/_font-style-utils.scss
@@ -11,7 +11,7 @@
 // Typography Utilities
 
 // List of common fonts to share in font groups.
-$default-fonts: ('Helvetica Neue', 'Helvetica', 'Arial', sans-serif) !default;
+$default-fonts: ('Helvetica', 'Arial', sans-serif) !default;
 
 $font-content:  $default-fonts !default;
 $font-mono: (Menlo, monospace) !default;
