Initial support for latest theme-settings.json spec.

--- a/src/styles/core/typography/_font-attribute-utils.scss
+++ b/src/styles/core/typography/_font-attribute-utils.scss
@@ -94,7 +94,10 @@
 
   // generate font family
   $font-family: map-get($attributes, font-family);
-  $value: if($font-family, $font-family, -get-font-family-for-size($size));
+  $value: if($font-family,
+    $font-family,
+    var(--typography-html-font, -get-font-family-for-size($size))
+  );
 
   $style: map-merge($style, (font-family: $value));
 
