--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -31,7 +31,7 @@ $article-stacked-margin-small: 20px;
 
 // TopicLink components
 $topic-link-icon-width: 1.294rem;
-$topic-link-icon-spacing: 0.5em;
+$topic-link-icon-spacing: 1rem;
 
 // Code Block Style Elements
 $code-block-style-elements-padding: 8px 14px !default;
