refactor: improve the hide sidebar animation

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -68,3 +68,6 @@ $card-horizontal-spacing-small: $card-horizontal-spacing / 2;
 
 // Small vp padding and width
 $small-viewport-content-padding: 20px !default;
+
+// AdjustableSidebar
+$adjustable-sidebar-hide-transition-duration: 0.5s;
