feat: Quick navigation UI
* Quick navigation modal with redesigned UI
* Keyboard navigation support

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -68,3 +68,8 @@ $card-horizontal-spacing-small: $card-horizontal-spacing / 2;
 
 // Small vp padding and width
 $small-viewport-content-padding: 20px !default;
+
+// Quick navigation
+$modal-margin-top: 10rem;
+$modal-margin-sides: 20rem;
+$modal-padding-top: 1.25rem;
