--- a/src/styles/core/colors/_dark.scss
+++ b/src/styles/core/colors/_dark.scss
@@ -56,6 +56,7 @@
   --color-nav-stuck: var(--color-nav-dark-stuck);
   --color-nav-uiblur-expanded: var(--color-nav-dark-uiblur-expanded);
   --color-nav-uiblur-stuck: var(--color-nav-dark-uiblur-stuck);
+  --color-quick-navigation-modal-shadow: #{change-color(dark-color(figure-gray), $alpha: 0.2)};
   --color-runtime-preview-disabled-text: #{change-color(dark-color(figure-gray-secondary), $alpha: 0.6)};
   --color-syntax-attributes: rgb(204, 151, 104);
   --color-syntax-characters: rgb(217, 201, 124);
