refactor: toggle border radius

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -15,6 +15,7 @@ $form-focus-size: 4px;
 
 // Border radius
 $border-radius: 4px !default;
+$nano-border-radius: $border-radius !default;
 $tiny-border-radius: $border-radius !default;
 $large-border-radius: $border-radius !default;
 $big-border-radius: $border-radius !default;
