refactor: navigator horizontal spacing to css vars

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -63,9 +63,9 @@ $aside-width-left-border: 6px !default;
 $total-columns: 12 !default;
 
 // Navigator
-$card-horizontal-spacing: 10px;
-$card-horizontal-spacing-large: $card-horizontal-spacing * 2;
-$card-horizontal-spacing-small: $card-horizontal-spacing / 2;
+$nav-card-horizontal-spacing: 10px;
+$nav-card-horizontal-spacing-large: $nav-card-horizontal-spacing * 2;
+$nav-card-horizontal-spacing-small: $nav-card-horizontal-spacing / 2;
 
 // Small vp padding and width
 $small-viewport-content-padding: 20px !default;
