Allow toggling sidebar navigator on/off, for large breakpoints (#99)
closes rdar://89564104

* feat: allow toggling the navigator on desktop resolutions
* feat: allow dragging to close entirely
* fix: make sure hidden item is hidden, even for Screen Readers and tab index
* fix: add separator to sidebar toggle icon
* fix: navigator toggle focus area
* fix: navigator closing overflow issues
* feat: track container size on screen or sidebar resize
* refactor: improve the toggle icon animation
* refactor: improvements to the large navigator toggling
* fix: issues with body height and weirdly wrapping text
* refactor: allow navigator toggle to be shown on small only
* refactor: properly add `.sidebar-transitioning` class to the AdjustableSidebarWidth, when in transition.
* fix: NavigatorCard.vue close icon focus area
* refactor: minor cleanup of constants
* fix: quirk in chrome

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -15,6 +15,7 @@ $form-focus-size: 4px;
 
 // Border radius
 $border-radius: 4px !default;
+$nano-border-radius: $border-radius !default;
 $tiny-border-radius: $border-radius !default;
 $large-border-radius: $border-radius !default;
 $big-border-radius: $border-radius !default;
@@ -68,3 +69,6 @@ $card-horizontal-spacing-small: $card-horizontal-spacing / 2;
 
 // Small vp padding and width
 $small-viewport-content-padding: 20px !default;
+
+// AdjustableSidebar
+$adjustable-sidebar-hide-transition-duration: 0.3s;
