refactor: cleanup css styling

--- a/src/styles/core/typography/_font-styles.scss
+++ b/src/styles/core/typography/_font-styles.scss
@@ -172,7 +172,7 @@ $font-styles: (
     large: 17_25
   ),
   tabnav-link: (
-    large: tabnav_link_17_17
+    large: nav_14_14
   ),
   badge: (
     large: 12_16
