[r94150776] fix: address feedback

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -35,7 +35,7 @@ $topic-link-icon-width: 1.294rem;
 $topic-link-icon-spacing: 1rem;
 
 // Icons
-$icon-size: 16px;
+$icon-size-default: 16px;
 
 // Code Block Style Elements
 $code-block-style-elements-padding: 8px 14px !default;
