--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -34,6 +34,9 @@ $article-stacked-margin-small: 20px;
 $topic-link-icon-width: 1.294rem;
 $topic-link-icon-spacing: 1rem;
 
+// Icons
+$icon-size-default: 16px;
+
 // Code Block Style Elements
 $code-block-style-elements-padding: 8px 14px !default;
 $code-listing-with-numbers-padding: 14px 0;
