Improved theme settings support (#402)
This implements the improvements related to theming
DocC-Render which were proposed in
[Customizing the look and feel of Swift-DocC-Render]
(https://forums.swift.org/t/customizing-the-look-and-feel-of-swift-docc-render/58858)

Resolves: rdar://97040358

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -14,7 +14,7 @@ $globalnav-height: 44px;
 $form-focus-size: 4px;
 
 // Border radius
-$border-radius: 4px !default;
+$border-radius: var(--border-radius, 4px) !default;
 $nano-border-radius: $border-radius !default;
 $tiny-border-radius: $border-radius !default;
 $large-border-radius: $border-radius !default;
