--- a/src/styles/core/_changes.scss
+++ b/src/styles/core/_changes.scss
@@ -19,7 +19,7 @@ $change-highlight-vertical-space-total: $change-highlight-vertical-space + $chan
 // Width of highlight endcaps only used in this file
 $change-total-coin-space: rem(5px);
 $change-coin-y-offset: 10px;
-$change-coin-y-offset-reduced: rem($change-highlight-vertical-space-total) + $change-total-coin-space/2;
+$change-coin-y-offset-reduced: rem($change-highlight-vertical-space-total) + $change-total-coin-space*0.5;
 $change-coin-x-offset: $change-highlight-horizontal-space - 9px;
 // the space needed for the change icon + it's margin
 $change-icon-occupied-space: $change-icon-width + $change-highlight-horizontal-space-rem;
