--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -14,6 +14,7 @@
 @import './base/typography';
 @import './base/syntax';
 @import './base/accessibility';
+@import './base/keyframes';
 @import './base/changes';
 @import './base/colors';
 
