--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -72,6 +72,9 @@ $nav-card-horizontal-spacing-small: $nav-card-horizontal-spacing / 2;
 
 // Small vp padding and width
 $small-viewport-content-padding: 20px !default;
+$large-viewport-dynamic-content-gutter: 80px !default;
 
 // AdjustableSidebar
 $adjustable-sidebar-hide-transition-duration: 0.3s;
+// OnThisPage
+$on-this-page-aside-width: 192px;
