--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -72,7 +72,8 @@ $nav-card-horizontal-spacing-small: $nav-card-horizontal-spacing / 2;
 
 // Small vp padding and width
 $small-viewport-content-padding: 20px !default;
-$large-viewport-dynamic-content-gutter: 80px !default;
+// matches `$nav-padding`
+$large-viewport-dynamic-content-padding: 22px !default;
 
 // AdjustableSidebar
 $adjustable-sidebar-hide-transition-duration: 0.3s;
