--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -340,12 +340,15 @@ $breakpoint-attributes: (
 /// Applies a content container, for cases with dynamic adjustable sidebars. In IDE mode uses the
 /// default breakpoint-content mixin.
 @mixin breakpoint-dynamic-sidebar-content {
+  $large-max-width: map-deep-get($breakpoint-attributes, (default, large, content-width));
+
   @include inTargetWeb {
-    max-width: 820px;
+    // 820px
+    max-width: $large-max-width - $large-viewport-dynamic-content-padding * 2;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 80px;
-    padding-right: 80px;
+    padding-left: $large-viewport-dynamic-content-padding;
+    padding-right: $large-viewport-dynamic-content-padding;
     box-sizing: border-box;
 
     @media print {
@@ -354,18 +357,12 @@ $breakpoint-attributes: (
       max-width: none;
     }
 
-    @media only screen and (min-width: 1500px) {
-      max-width: 920px;
+    @include breakpoints-from(large) {
+      max-width: $large-max-width;
     }
 
-    @include breakpoints-from(large) {
-      box-sizing: unset;
-      margin-left: 0;
-
-      // when the sidebar is hidden on desktop, center the content
-      @include unify-selector('.sidebar-hidden', true) {
-        margin-left: auto;
-      }
+    @media only screen and (min-width: 1500px) {
+      max-width: $large-max-width + 100;
     }
 
     @include breakpoint(small) {
