--- a/src/styles/core/typography/_font-styles.scss
+++ b/src/styles/core/typography/_font-styles.scss
@@ -74,6 +74,9 @@ $font-styles: (
   caption: (
     large: 12_16
   ),
+  locale-selector: (
+    large: 12_16_semibold,
+  ),
   // custom typography for /tutorials
   metadata-item: (
     large: 12_16_semibold,
