fix: update latest code to comply

--- a/src/styles/core/_helpers.scss
+++ b/src/styles/core/_helpers.scss
@@ -297,7 +297,7 @@
 }
 
 @mixin space-out-between-siblings($margin) {
-  * + &, & + /deep/ * {
+  * + &, & + :deep(*) {
     margin-top: $margin;
   }
 }
