fix: styling issues

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -41,7 +41,7 @@ body {
   --spacing-param: #{rem(28px)};
 
   // Default margin for Code Listing in Declaration
-  --declaration-code-listing-margin: 14px 0;
+  --declaration-code-listing-margin: 30px 0 0 0;
 
   // Default padding for Code Blocks
   --code-block-style-elements-padding: 8px 14px;
