[rdar://104924748] chore: use suggest-lang-height var

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -78,3 +78,6 @@ $large-viewport-dynamic-content-padding: 80px !default;
 $adjustable-sidebar-hide-transition-duration: 0.3s;
 // OnThisPage
 $on-this-page-aside-width: 192px;
+
+// Suggest Lang
+$suggest-lang-height: 52px;
