[rdar://115116961] fix: prevent underline in OnThisPage, Navigator Head and Skip Nav + fix focus style for Navigator Head

--- a/src/styles/base/_accessibility.scss
+++ b/src/styles/base/_accessibility.scss
@@ -12,6 +12,8 @@ $-skip-nav-position: 0;
 $global-nav-height: 44px;
 
 #skip-nav {
+  text-decoration: none;
+
   @include showonfocus(
     $-skip-nav-position,
     $-skip-nav-position,
