[rdar://116401230] feat: working on UI changes

--- a/src/styles/core/typography/_font-styles.scss
+++ b/src/styles/core/typography/_font-styles.scss
@@ -182,7 +182,7 @@ $font-styles: (
   ),
   // nav typography
   nav-title: (
-    large: (19_27, nav),
+    large: (21_25_semibold, nav),
   ),
   nav-title-compact: (
     small: (nav_17_17_semibold, nav)
