[rdar://116401230] fix: hierarchy styles

--- a/src/styles/core/typography/_font-styles.scss
+++ b/src/styles/core/typography/_font-styles.scss
@@ -204,6 +204,9 @@ $font-styles: (
   card-eyebrow-small: (
     large: 14_18_semibold,
   ),
+  hierarchy: (
+    large: 14_18_semibold,
+  ),
   card-eyebrow-large: (
     large: 17_21_semibold,
     medium: 14_18_semibold,
